--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,8 @@ a {
 }
 
 .contacts-link {
-  display: block;
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
   color: inherit;
@@ -160,6 +161,19 @@ a {
 .contacts-link:hover,
 .contacts-link:focus {
   color: var(--accent-color);
+}
+
+.icon-mail,
+.icon-smartphone {
+  fill: var(--main-text-color);
+  margin-right: 10px;
+}
+
+.contacts-link:hover .icon-mail,
+.contacts-link:focus .icon-mail,
+.contacts-link:hover .icon-smartphone,
+.contacts-link:focus .icon-smartphone {
+  fill: var(--accent-color);
 }
 
 /*-------- Секция герой --------*/
@@ -234,6 +248,16 @@ a {
   margin-right: 0;
 }
 
+.features-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-color: var(--bg-grey-color);
+}
+
 .features-list .title {
   margin-bottom: 10px;
 
@@ -259,7 +283,8 @@ a {
 }
 
 .about-title,
-.team-title {
+.team-title,
+.clients-title {
   margin-bottom: 50px;
 
   color: var(--title-text-color);
@@ -294,6 +319,8 @@ a {
 .team-card {
   padding-bottom: 30px;
   border-radius: 0 0 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 
   background-color: var(--white-color);
 
@@ -317,9 +344,85 @@ a {
 }
 
 .team-list .post {
+  margin-bottom: 16px;
+
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+}
+
+.social-list-item {
+  width: 44px;
+  height: 44px;
+}
+
+.social-list-item + .social-list-item {
+  margin-left: 10px;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+
+  fill: #afb1b8;
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+  fill: var(--white-color);
+}
+
+/*-------- Секция клиенты --------*/
+
+.clients-list {
+  display: flex;
+}
+
+.clients-list-item {
+  width: 170px;
+  height: 92px;
+}
+
+.clients-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.clients-list-link:hover,
+.clients-list-link:focus {
+  border-color: var(--accent-color);
+}
+
+.clients-icon {
+  fill: #afb1b8;
+}
+
+.clients-list-link:hover .clients-icon,
+.clients-list-link:focus .clients-icon {
+  fill: var(--accent-color);
 }
 
 /*-------- Футер сайта --------*/
@@ -329,6 +432,15 @@ a {
   padding-bottom: 60px;
 
   background-color: var(--bg-dark-color);
+}
+
+.footer-container {
+  display: flex;
+}
+
+.footer-left {
+  width: 231px;
+  margin-right: 70px;
 }
 
 .footer-logo {
@@ -373,6 +485,28 @@ a {
   color: var(--accent-color);
 }
 
+.footer-social {
+  width: 206px;
+}
+
+.footer-social > .text {
+  display: inline-block;
+  margin-bottom: 20px;
+
+  color: var(--white-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.footer-social-link {
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: var(--white-color);
+}
+
 /*-------- Страница Портфолио --------*/
 
 .filter-list {
@@ -404,6 +538,9 @@ a {
 
 .filter-list-btn:hover,
 .filter-list-btn:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+
   color: var(--white-color);
   background-color: var(--accent-color);
 }
@@ -424,6 +561,11 @@ a {
 .portfolio-list .link {
   color: inherit;
   text-decoration: none;
+}
+
+.portfolio-list .link:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-list .image {
